# mspm0-data

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  d
.github/ci/: build.sh  generated.sh
.github/ci/workflows/: generated.yaml
.github/workflows/: ci.yaml  generated.yaml
data/: parts.yaml
data-gen/: Cargo.toml
data-gen/src/: docs.rs  lib.rs  main.rs  serde_helper.rs  sysconfig.rs
data-gen/src/header/: mod.rs  msp.rs
data/int_group/: mspm0c110x.yaml  mspm0g110x.yaml  mspm0g150x.yaml  mspm0g151x.yaml  mspm0g310x.yaml  mspm0g351x.yaml  mspm0g518x.yaml  mspm0l110x.yaml  mspm0l111x.yaml  mspm0l122x.yaml  mspm0l130x.yaml  mspm0l222x.yaml
data/registers/: adc_g110x_g150x_g310x_g350x_l122x_l222x.yaml  adc_g151x_g351x.yaml  adc_h321x.yaml  adc_l110x_l130x_l134x_c110x_03fx.yaml  adc_l111x.yaml  adc_v1.yaml  aes_v1.yaml  beeper.yaml  canfd.yaml  canfd_v1.yaml  comp_v1.yaml  cpuss_v1.yaml  crc_v1.yaml  dac_v1.yaml  debugss_v1.yaml  dma.yaml  dma_v1.yaml  eventlp_v1.yaml  flashctl_v1.yaml  gpio_v1.yaml  i2c_v1.yaml  iomux_v1.yaml  mathacl_v1.yaml  opa_v1.yaml  rtc_v1.yaml  spi_v1.yaml  sysctl_c110x.yaml  sysctl_g350x_g310x_g150x_g110x.yaml  sysctl_g351x_g151x.yaml  sysctl_h321x.yaml  sysctl_l110x_l130x_l134x.yaml  sysctl_l111x.yaml  sysctl_l122x_l222x.yaml  tim.yaml  tim_v1.yaml  trng_v1.yaml  uart.yaml  usbfs_v1.yaml  vref_v1.yaml  wuc_v1.yaml  (+2 more)
metadata-gen/: Cargo.toml
metadata-gen/src/: main.rs  package.rs
metadata-types/: Cargo.toml
metadata-types/src/: lib.rs
mspm0-data-gen/: Cargo.toml
mspm0-data-gen/src/: clock_tree.rs  generate.rs  header.rs  int_group.rs  main.rs  parts.rs  perimap.rs  sysconfig.rs  util.rs  verify.rs
mspm0-data-types/: Cargo.toml
mspm0-data-types/src/: attribute.rs  lib.rs
mspm0-metapac-gen/: Cargo.toml
mspm0-metapac-gen/res/: Cargo.toml  metadata.rs
mspm0-metapac-gen/src/: interrupt.rs  krate.rs  linker.rs  main.rs  metadata.rs  perimap.rs  peripheral.rs  registers.rs
transforms/: ADC.yaml  AES.yaml  CANFD.yaml  COMP.yaml  CRC.yaml  DAC.yaml  DEBUGSS.yaml  DMA.yaml  EVENTLP.yaml  FLASHCTL.yaml  GPIO.yaml  I2C.yaml  IOMUX.yaml  MATHACL.yaml  OPA.yaml  README.md  RTC.yaml  SPI.yaml  SYSCTL_C110x.yaml  SYSCTL_G350x_G310x_G150x_G110x.yaml  SYSCTL_G351x_G151x.yaml  SYSCTL_H321x.yaml  SYSCTL_L110x_L130x_L134x.yaml  SYSCTL_L111x.yaml  SYSCTL_L122x_L222x.yaml  TIM.yaml  TIMx.yaml  TRNG.yaml  UART.yaml  USBFS.yaml  VREF.yaml  WUC.yaml  WWDT.yaml  transform.sh
