[workspace]
resolver = "2"
members = [
    "mspm0-data-types",
    "mspm0-metapac-gen",
    "mspm0-metapac",
    "mspm0-data-gen",
]

[workspace.dependencies]
anyhow = "1.0.89"
chiptool = { git = "https://github.com/embassy-rs/chiptool", rev = "a349968cd740c03f1aa6bfbecc49c80db1e19fda" }
glob = "0.3.1"
heck = "0.5.0"
quote = "1.0.37"
lopdf = "0.34.0"
regex = "1.11.0"
serde = "1.0.210"
serde_json = "1.0.128"
serde_yaml = "0.9.33"
proc-macro2 = "1.0.86"
walkdir = "2.5.0"

# Optimize for dev experience: shortest "build+run" time after making a small change.
[profile.release]
debug = true
incremental = true
panic = 'abort'
opt-level = 2
