[package]
name = "mspm0-metapac-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chiptool.workspace = true
heck.workspace = true
glob.workspace = true
quote.workspace = true
proc-macro2.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

mspm0-data-types = { path = "../mspm0-data-types" }
